@@ -1,3 +1,6 @@
+2011-11-14 14:41 Duan Pengfei<bestdpf@gmail.com>
+seu3d-1.0.31
+remove some unused classes in controller
 2011-10-28 14:25 Duan Pengfei<bestdpf@gmail.com>
 seu3d-1.0.30
 clean data dir
